# voxel-game

./: CMakeLists.txt  README.md
include/: Findglad.cmake  Findglfw3.cmake  Shader.h  camera.h
include/GLAD/include/glad/: glad.h
include/GLAD/src/: glad.c
resources/saves/default/world1/: chunk.csv  chunk.data
src/: Block.cpp  Block.h  main.cpp
src/Render/: BlockRender.cpp  BlockRender.h
src/World/: BlockDef.h  Chunk.cpp  Chunk.h  ChunkManager.cpp  ChunkManager.h  ChunkVertices.h  DefaultChunkVertices.h  World.cpp  World.h
